--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/proxy": "^2.1.0",
     "axios": "^1.7.2",
+    "babel-runtime": "^6.26.0",
+    "core-js": "^3.37.1",
+    "marked": "^12.0.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
