--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.37.1",
+    "marked": "^13.0.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
